welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: illegal start of simple expression
    var compteur2 = compteur
    ^